test/integration/httproute-match-conditions/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hug-gateway
spec:
  gatewayClassName: haproxy
  listeners:
  - name: http
    port: 31081
    protocol: HTTP
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
    hostname: "*.haproxy"
